Contrast fix.

--- a/style/edthedev.css
+++ b/style/edthedev.css
@@ -6,7 +6,7 @@ Page Styles
 {
 	font-family: 'times new roman', times, serif;
 	font-size:140%;
-	background-color: #333 !important;
+	background-color: #EEE !important;
 }
 
 canvas{
